# opencog

./: .bzrignore  .dockerignore  .gitattributes  .gitignore  .gitmodules  AFImplicator.cc  AUTHORS  AVUtils.cc  AVUtils.h  AtomAttention.cc  AtomBins.cc  AtomBins.h  AtomSpaceEventSubscribeExample.cc  AtomSpaceImplUTest.cxxtest  AttentionBank.cc  AttentionBank.h  AttentionSCM.cc  AttentionSCM.h  AttentionUTest.cxxtest  AttentionValueUTest.cxxtest  AttentionalFocusCB.cc  AttentionalFocusCBUTest.cxxtest  Authors.txt  BankAsyncUTest.cxxtest  BankImplUTest.cxxtest  CMakeLists.txt  Dockerfile  Dockerfile-utopic  Doxyfile  Doxyfile.in  HACKING  ImportanceIndex.cc  ImportanceIndex.h  LICENSE  LICENSE.AGPL  README  README.archlinux  README.fedora  README.gentoo  README.md  (+48 more)
DestinCuda/: .gitignore  AdviceData.cu  AdviceData.h  BUILDING_JavaDeSTIN.txt  CMakeLists.txt  CurandGeneratorWrapper.h  DeSTIN.cvp  DestinCuda.cu  DestinCuda.h  DestinData.cu  DestinData.h  DestinKernel.cu  DestinKernel.h  DestinKernel.i  DestinLayer.cu  DestinLayer.h  INSTALL.txt  ImageTransporter.h  JavaDestin.java  JavaDestin_README.txt  LayerFinishedCallback.h  TestVideo.cpp  Transporter.h  VideoSource.cpp  VideoSource.h  config.xml  debug_run.sh  java_build.sh  java_run.sh  log.txt  params-25-16-12-10-64SerpNoAvgNoFFTB1.txt  params-25-16-12-10-64SerpNoAvgNoFFTB1.xml  run_java_destin.sh  simpleRun.sh
DestinCuda/JavaDestin/: build.xml  run.sh
DestinCuda/profiler/: DeSTIN.cvp
DestinCuda/pugixml/: .gitignore  CMakeLists.txt
cython/: CMakeLists.txt  test_bank.py
cython/opencog/: CMakeLists.txt  bank.pxd  bank.pyx
examples/AgentROS/: CMakeLists.txt  package.xml
examples/attention/: CMakeLists.txt  ExperimentSetupModule.cc  ExperimentSetupModule.h  Globals.cc  SentenceGenStimulateAgent.cc  SentenceGenStimulateAgent.h  dump-av.data  opencog.conf  plot.py
examples/hopfield/: CMakeLists.txt  HopfieldDemo.cc  HopfieldOptions.cc  HopfieldOptions.h  HopfieldServer.cc  HopfieldServer.h  HopfieldUbigrapher.cc  HopfieldUbigrapher.h  ImprintAgent.cc  ImprintAgent.h  Pattern.cc  Pattern.h  README  StorkeyAgent.cc  StorkeyAgent.h  analyse_hopfield_results.py  cue_patterns_10x10.txt  cue_patterns_3x3.txt  cue_patterns_4x4.txt  test_hopfield.sh  training_patterns_10x10.txt  training_patterns_3x3.txt  training_patterns_4x4.txt
experiments/attention/: CMakeLists.txt  ExperimentSetupModule.cc  ExperimentSetupModule.h  README.md  SentenceGenStimulateAgent.cc  SentenceGenStimulateAgent.h  dump-av.data  dump-hebtv.data  opencog.conf  plot.py
lib/: AddCxxtest.cmake  CMakeLists.txt  COPYING-CMAKE-SCRIPTS  FindAtomSpace.cmake  FindBFD.cmake  FindBoost.cmake  FindCSockets.cmake  FindCogUtil.cmake  FindCxxtest.cmake  FindCython.cmake  FindGHC.cmake  FindGSL.cmake  FindGTK3.cmake  FindGuile.cmake  FindHyperTable.cmake  FindICU.cmake  FindIODBC.cmake  FindIberty.cmake  FindLibMemCache.cmake  FindLibMemCached.cmake  FindLibUbiGraphClient.cmake  FindLinkGrammar.cmake  FindLua51.cmake  FindLuabind.cmake  FindMOSES.cmake  FindMsgPack.cmake  FindOPENCOG.cmake  FindOctomap.cmake  FindProtobuf.cmake  FindPthreads.cmake  FindPython2Interp.cmake  FindPython3Interp.cmake  FindSDL_gfx.cmake  FindSIGAR.cmake  FindSTLPort.cmake  FindStack.cmake  FindTBB.cmake  FindUUID.cmake  FindUnixODBC.cmake  FindVALGRIND.cmake  (+36 more)
lib/compat/: FindBoost.cmake
lib/json_spirit/: CMakeLists.txt  README  json_spirit.h  json_spirit_reader.cpp  json_spirit_reader.h  json_spirit_reader_template.h  json_spirit_stream_reader.h  json_spirit_utils.h  json_spirit_value.h  json_spirit_writer.cpp  json_spirit_writer.h  json_spirit_writer_options.h  json_spirit_writer_template.h
lib/zmq/: zhelpers.hpp  zmq.hpp
link-grammar-5.4.2/: AUTHORS  ChangeLog  FindLinkGrammar.cmake  LICENSE  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README.md  TODO  aclocal.m4  autogen.err  autogen.sh  config.status  configure  configure.ac  libtool  link-grammar.pc  link-grammar.pc.in  link-grammar.spec  link-grammar.spec.in
link-grammar-5.4.2/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
link-grammar-5.4.2/bindings/: Makefile.am  Makefile.in  README
link-grammar-5.4.2/data/: Makefile.am  Makefile.in  README
link-grammar-5.4.2/docker/: docker-build.sh
link-grammar-5.4.2/link-grammar/: Makefile.am  Makefile.in  README.md  api-structures.h  api-types.h  api.c  api.lo  connectors.c  connectors.h  connectors.lo  disjunct-utils.c  disjunct-utils.h  disjunct-utils.lo  error.c  error.h  error.lo  externs.h  lg_assert.h  liblink-grammar.la  link-features.h  link-features.h.in  link-grammar.def  link-includes.h  resources.c  resources.h  resources.lo  string-set.c  string-set.h  string-set.lo  utilities.c  utilities.h  utilities.lo
link-grammar-5.4.2/link-parser/: Makefile.am  Makefile.in  command-line.c  command-line.h  lg_readline.c  lg_readline.h  link-parser.c  parser-utilities.c  parser-utilities.h
link-grammar-5.4.2/m4/: varcheckpoint.m4
link-grammar-5.4.2/man/: Makefile.am  Makefile.in  link-parser.man1
link-grammar-5.4.2/morphology/: Makefile.am  Makefile.in  README
link-grammar-5.4.2/tests/: Makefile.am  Makefile.in  dict-reopen.cc  mem-leak.cc  multi-java.cc  multi-thread.cc
link-grammar-5.4.2/viterbi/: Makefile.am  Makefile.in  README  atom-types.cc  atom-types.h  atom.cc  atom.h  compile-base.cc  compile-base.h  compile.cc  compile.h  compress.cc  compress.h  connect.cc  connect.h  connector-utils.cc  connector-utils.h  disjoin.cc  disjoin.h  environment.cc  environment.h  garbage.cc  garbage.h  parser.cc  parser.h  (+10 more)
moses/: CMakeLists.txt  LICENSE
opencog/: CMakeLists.txt  README  README.md  TimeServerSavable.cc  atom_types.script  atomspace.py  spacetime.pyx
src/: CMakeLists.txt  OCPublishers.py  OCSubscribers.py  Octree.h  README.md  cog_perception.py  mapnode.py  opencog_initializer.py  opencog_test_perception.py  perception_module.py  spock_listener.py  test_server.py  visualreceptor.py
test/: CMakeLists.txt
tests/: CMakeLists.txt  README.md  base_test_case.py  test_case_factory.py  test_case_loader.py
(+9852 files in other folders)
